--- a/sass/style.scss
+++ b/sass/style.scss
@@ -17,7 +17,7 @@
     animation: chargement linear; 
     animation-delay: 2900ms;
     animation-duration: 100ms;
-    background-color: Lighten($quaternaire, 100%);
+    background-color: white;
     animation-fill-mode: forwards;
 }
 .body {
@@ -246,7 +246,7 @@
         right: 10px; 
         top: 10px;
         transform: scale(1);
-        transition: all 500ms;
+        transition: all 800ms;
     }
     &_vide {
         position: absolute; 
